# Fronts3D_CUDA

./: CMakeLists.txt  LICENSE  README.md  Third-Party-Licenses.md  config.cuh.in
apps/: CMakeLists.txt  main.cu  mainMPI.cu
evaluations/: Front3D_container.def  README.md
include/cufronts/IO/: BinaryIO.hpp  commandLineParser.hpp  fs_helper.hpp  netCDFTypeConversion.hpp  parserOptions.hpp
include/cufronts/processing/: processing_steps.cuh
include/cufronts/processing/cross_sections/: cross_sections.cuh
include/cufronts/processing/scoring/: calculateScores.cuh  optimizing.cuh
include/cufronts/processing/textures/: texture_handling.cuh
include/cufronts/processing/util/: container_typedefs.hpp  conversion_helper.cuh  conversion_helper.hpp  extent.hpp  helper_3d.cuh  options.hpp  processingConfig.cuh  random.hpp
include/cufronts/types/: math_helper.cuh  typedefs.hpp
scripts/: baroCheck.py  diffResults.py  getTimings.py  plotTempDiffs.py
src/: CMakeLists.txt
src/IO/: CMakeLists.txt
src/processing/: CMakeLists.txt  processing_steps.cu
src/types/: CMakeLists.txt
